updated method names and unit test for users